MODON MRE BPDEV/force-app/main/default/objects/User/fields/Access_to_Send_SPA_for_CounterSign__c.field-meta.xml
<CustomField>
    <fullName>Access_to_Send_SPA_for_CounterSign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access to Send SPA for CounterSign</label>
    <type>Checkbox</type>
</CustomField>