MODON MRE BPDEV/force-app/main/default/objects/User/fields/Access_to_View_Account_Details__c.field-meta.xml
<CustomField>
    <fullName>Access_to_View_Account_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access to View Account Details</label>
    <type>Checkbox</type>
</CustomField>