MODON MRE BPDEV/force-app/main/default/objects/User/fields/Bypass_Queue_Owner_Filter__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Queue_Owner_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Queue Owner Filter</label>
    <type>Checkbox</type>
</CustomField>