MODON MRE BPDEV/force-app/main/default/objects/User/fields/Console_Theme__c.field-meta.xml
<CustomField>
    <fullName>Console_Theme__c</fullName>
    <description>Which Modon Sales Console theme this user last chose. One field on User rather than a User_Preference__c object, which is what the PoC used - a whole object, sharing model and trigger surface to hold one word is not worth it. The console also caches the value in localStorage so the first frame paints correctly before this resolves; that cache is per-device, this is the cross-device source of truth. Blank means the user has never chosen, and the console defaults to Dark. (Aurelix IT, 09 Aug 2026)</description>
    <inlineHelpText>Preferred colour theme for the Modon Sales Console.</inlineHelpText>
    <label>Console Theme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dark</fullName>
                <default>true</default>
                <label>Dark</label>
            </value>
            <value>
                <fullName>Light</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>