MODON MRE BPDEV/force-app/main/default/objects/User/fields/EmailBase64String__c.field-meta.xml
<CustomField>
    <fullName>EmailBase64String__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EmailBase64String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>