MODON MRE BPDEV/force-app/main/default/objects/User/fields/EmiratesIDNumber__c.field-meta.xml
<CustomField>
    <fullName>EmiratesIDNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emirates ID Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>