MODON MRE BPDEV/force-app/main/default/objects/User/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LinkedIn</label>
    <type>Url</type>
</CustomField>