MODON MRE BPDEV/force-app/main/default/objects/User/fields/Loop__dsToken__c.field-meta.xml
<CustomField>
    <fullName>Loop__dsToken__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DocuSign API UserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>