MODON MRE BPDEV/force-app/main/default/objects/User/fields/ortoo_qra__Assignment_Group_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>ortoo_qra__Assignment_Group_Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is being retired, is not intended to be used anymore except for upgrade script to initialize new flag values. Other than that this field should not be used anywhere else</description>
    <inlineHelpText>If checked, user will be enabled for Q-assign Assignment Groups and can be assigned jobs if an active member of a Q-assign Assignment Group. If unchecked, the user will be inactive for Q-assign Assignment Groups and cannot be assigned jobs.</inlineHelpText>
    <label>Available within Q-assign</label>
    <type>Checkbox</type>
</CustomField>