MODON MRE BPDEV/force-app/main/default/objects/User/fields/OTP_Code__c.field-meta.xml
<CustomField>
    <fullName>OTP_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OTP Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>