MODON MRE BPDEV/force-app/main/default/objects/User/fields/PhotoImageURL__c.field-meta.xml
<CustomField>
    <fullName>PhotoImageURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PhotoImageURL</label>
    <type>Url</type>
</CustomField>