MODON MRE BPDEV/force-app/main/default/objects/User/fields/Twitter__c.field-meta.xml
<CustomField>
    <fullName>Twitter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Twitter</label>
    <type>Url</type>
</CustomField>