MODON MRE BPDEV/force-app/main/default/objects/User/listViews/Customer_Portal.listView-meta.xml
<ListView>
    <fullName>Customer_Portal</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Modon Customer Community Plus</value>
    </filters>
    <label>Customer Portal</label>
</ListView>