MODON MRE BPDEV/force-app/main/default/objects/User/listViews/Inactive_System_admins.listView-meta.xml
<ListView>
    <fullName>Inactive_System_admins</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive System admins</label>
</ListView>